# teleprompter

./: .gitignore  DEVELOPMENT.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  pyproject.toml  setup.py  tauri.bundle.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: V1__create_providers_table.sql  V1__create_settings_table.sql  V1__create_users_table.sql  V2__create_models_table.sql  V2__create_posts_table.sql  V3__add_user_avatar.sql  V3__create_conversaions_table.sql  V4__create_messages_table.sql  V5__create_topic_table.sql  V6__create_blocks_table.sql
src-tauri/python/grove.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src-tauri/python/tauri_app/: __init__.py  __main__.py  lifecycle.py
src-tauri/python/tauri_app/commands/: __init__.py  chat_commands.py  conversation_commands.py  greeting_commands.py  message_commands.py  model_commands.py  setting_commands.py  topic_commands.py
src-tauri/python/tauri_app/dtos/: __init__.py  greeting.py
src-tauri/python/tauri_app/entities/: block.py  conversation.py  grove.py  message.py  model.py  provider.py  setting.py  topic.py
src-tauri/python/tauri_app/services/: __init__.py  greeting_service.py  minimax_service.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/migrations/: mod.rs
src/assets/styles/: index.css
src/router/: index.ts
src/services/: chatService.ts  douyinLiveFetcher.js  index.ts  protobufParser.js  settingService.ts  sign.js  topicService.ts  types.ts  utils.js
src/tests/: douyinLiveTest.ts
src/types/: api.ts
src/views/: Knowledge.vue  LiveRoom.vue  Models.vue  Topics.vue
