[package]
name = "teleprompter"
version = "0.1.0"
description = "teleprompter"
authors = ["shellphy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "teleprompter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.25" }
pytauri = { version = "0.6" }  
tauri-plugin-pytauri = { version = "0.6" }
refinery = { version = "0.8", features = ["rusqlite"] }
rusqlite = { version = "0.30", features = ["bundled"] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-fs = "2"
tauri-plugin-websocket = "2"

[[bin]]
# the same as the package name
name = "teleprompter"
path = "src/main.rs"
required-features = ["pytauri/standalone"]

[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"

