[project]
name = "grove"  
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = ["pytauri == 0.5.*", "pydantic == 2.*", "anyio == 4.*"]  

[project.entry-points.pytauri]
ext_mod = "tauri_app.ext_mod"

[build-system]
requires = ["setuptools>=61", "Cython>=3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["python"] }
